@@ -1,37 +1,17 @@
--ea
 -server
--Xms1g
--Xmx1g
+-Xms2g
+-Xmx2g
+-XX:NewRatio=3
 -Xss16m
--XX:PermSize=512m
--XX:MaxPermSize=512m
--XX:+DoEscapeAnalysis
--XX:+UseCompressedOops
--XX:+UnlockExperimentalVMOptions
 -XX:+UseConcMarkSweepGC
--XX:LargePageSizeInBytes=256m
--XX:ReservedCodeCacheSize=256m
--XX:+UseCodeCacheFlushing
+-XX:+CMSParallelRemarkEnabled
+-XX:ConcGCThreads=4
+-XX:ReservedCodeCacheSize=240m
+-XX:+AlwaysPreTouch
+-XX:+TieredCompilation
 -XX:+UseCompressedOops
--XX:ParallelGCThreads=8
--XX:+UseParNewGC
--XX:+UseConcMarkSweepGC
--XX:+DisableExplicitGC
--XX:+ExplicitGCInvokesConcurrent
--XX:+PrintGCDetails 
--XX:+PrintFlagsFinal
--XX:+AggressiveOpts
--XX:+HeapDumpOnOutOfMemoryError
--XX:+CMSClassUnloadingEnabled
-
--XX:CMSInitiatingOccupancyFraction=60
--XX:+CMSClassUnloadingEnabled
--XX:+CMSParallelRemarkEnabled 
--XX:+UseAdaptiveGCBoundary
--XX:+UseSplitVerifier 
--XX:CompileThreshold=10000 
-
--XX:+OptimizeStringConcat
--XX:+UseStringCache 
--XX:+UseFastAccessorMethods 
--XX:+UnlockDiagnosticVMOptions
+-XX:SoftRefLRUPolicyMSPerMB=50
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-Djsse.enableSNIExtension=false
+-ea
